#
# Makefile to provide some missing texlive files
#
# Generally speaking, we don't care much about the version of these
# files since most have been around for decades.
#
# (c) Massachusetts Institute of Technology, 2020
# The contents of the package Copyright statement apply here.
#

EXTRA_DIST = $(srcdir)/acronym.sty $(srcdir)/biblatex.sty \
	$(srcdir)/logreq.def $(srcdir)/logreq.sty $(srcdir)/outlines.sty

#
# eof
#
