#
# Makefile for C++ libraries and applications
# (c) Massachusetts Institute of Technology, 2020-2022
# The contents of the package Copyright statement apply here.
#

SUBDIRS = Message # Math Utilities Containers vex2json MK4Interface
# these are not yet stable...
# Applications Calibration Operators Plugins
# see CMakeLists.txt for order

#
# eof
#
