#
# Makefile for C++ Mk4 Interface Class
# (c) Massachusetts Institute of Technology, 2020
# The contents of the package Copyright statement apply here.
#

AM_CXXFLAGS = -I. -I$(srcdir)/include -Wall

#pkginclude_HEADERS = include/MHOXXX.hh

#pkglib_LTLIBRARIES = libMHOXXX.la

#libMHOXXX_la_SOURCES = src/MHOUXXX.cc

#libMHOXXX_la_LDFLAGS = -avoid-version

EXTRA_DIST =

#
# eof
#
