if(HOPS3_USE_CXX)
    #only the following applications have been upgraded to be compiled as C++
    add_subdirectory(adump)
    add_subdirectory(aedit)
    add_subdirectory(alist)
    add_subdirectory(fourfit)
    add_subdirectory(fplot)
else()
    add_subdirectory(adump)
    add_subdirectory(aedit)
    add_subdirectory(alist)
    add_subdirectory(average)
    add_subdirectory(cofit)
    add_subdirectory(fourfit)
    add_subdirectory(fourmer)
    add_subdirectory(fplot)
    add_subdirectory(fringex)
    add_subdirectory(search)
    add_subdirectory(snratio)
    add_subdirectory(legacy/CorAsc2)
endif()

if(HOPS_ENABLE_TEST)
    add_subdirectory(test)
endif(HOPS_ENABLE_TEST)
