#
# Makefile for C applications
# (c) Massachusetts Institute of Technology, 2020-2022
# The contents of the package Copyright statement apply here.
#

FF_FAMILY = fourfit fourmer fplot fringex
AE_FAMILY = aedit alist adump
PP_FAMILY = average cofit search snratio
LEGACY = legacy
SUBDIRS = $(FF_FAMILY) $(AE_FAMILY) $(PP_FAMILY) $(LEGACY) test

EXTRA_DIST = CMakeLists.txt

#
# eof
#
