#
# Makefile for C fourfit libraries
# (c) Massachusetts Institute of Technology, 2020
# The contents of the package Copyright statement apply here.
#
if HAVE_FFTW
# FIXME: PGPLOT!
# FIXME: b names
# FIXME: unnecessary flags/libs
  SUBDIRS = ffcontrol ffcore ffio ffmath ffsearch ffplot
else
  SUBDIRS = ffcontrol ffcore ffmath
endif
#
# eof
#
